--- a/package.json
+++ b/package.json
@@ -14,6 +14,12 @@
     "dependencies": {
         "@fortawesome/fontawesome-svg-core": "^6.3.0",
         "@fortawesome/free-regular-svg-icons": "^6.3.0",
-        "@fortawesome/free-solid-svg-icons": "^6.3.0"
+        "@fortawesome/free-solid-svg-icons": "^6.3.0",
+        "@oruga-ui/oruga-next": "^0.5.10",
+        "@vitejs/plugin-vue": "^4.1.0",
+        "latest": "^0.2.0",
+        "react-scripts": "^5.0.1",
+        "vue": "^3.2.36",
+        "vue-loader": "^17.0.1"
     }
 }
