--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.2",
         "postcss": "^8.4.21",
-        "tailwindcss": "^3.2.7"
+        "tailwindcss": "^3.3.1"
     },
     "dependencies": {
         "@fortawesome/fontawesome-svg-core": "^6.3.0",
@@ -17,8 +17,9 @@
         "@fortawesome/free-solid-svg-icons": "^6.3.0",
         "@oruga-ui/oruga-next": "^0.5.10",
         "@vitejs/plugin-vue": "^4.1.0",
+        "flowbite": "^1.6.4",
         "latest": "^0.2.0",
-        "react-scripts": "^5.0.1",
+        "react-scripts": "^2.1.3",
         "vue": "^3.2.47",
         "vue-axios": "^3.5.2",
         "vue-loader": "^17.0.1",
